--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # compiled output -
 /dist
 /node_modules
-
+/postgres
 # Logs
 logs
 *.log
@@ -27,6 +27,7 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+.env
 
 # IDE - VSCode
 .vscode/*
