--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DATABASE_USERNAME = ubntojirihw5pi9t
 DATABASE_PASSWORD = pFmW47CldiR7WvE1cITp
 DATABASE_NAME = bt92jm2wtirh9gsjubcj
 PORT = 3000
+
+JWT_SECRET = PeDRoSPPS
