--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "@nestjs/common": "^8.0.0",
         "@nestjs/config": "^2.2.0",
         "@nestjs/core": "^8.0.0",
+        "@nestjs/jwt": "^10.2.0",
         "@nestjs/mapped-types": "^1.1.0",
+        "@nestjs/passport": "^10.0.3",
         "@nestjs/platform-express": "^8.0.0",
         "@nestjs/typeorm": "^9.0.1",
         "bcrypt": "^5.1.0",
@@ -33,6 +35,8 @@
         "class-validator": "^0.13.2",
         "mysql": "^2.18.1",
         "mysql2": "^2.3.3",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
@@ -47,6 +51,7 @@
         "@types/express": "^4.17.13",
         "@types/jest": "27.0.2",
         "@types/node": "^16.0.0",
+        "@types/passport-jwt": "^4.0.1",
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
