--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DATABASE_HOST = bt92jm2wtirh9gsjubcj-mysql.services.clever-cloud.com
-DATABASE_PORT =  3306
-DATABASE_USERNAME = ubntojirihw5pi9t
-DATABASE_PASSWORD = K30Jp9OPmhBP15ALr7Mg
-DATABASE_NAME = bt92jm2wtirh9gsjubcj
-PORT = 3000
+DATABASE_HOST = xxx
+DATABASE_PORT =  xxx
+DATABASE_USERNAME = xxx
+DATABASE_PASSWORD = xxx
+DATABASE_NAME = xxx
+PORT = xxx
 
 
-JWT_SECRET = PeDRoSPPS
+JWT_SECRET = xxx
 
