--- a/.env
+++ b/.env
@@ -1,10 +1,11 @@
-DATABASE_HOST = xxx
-DATABASE_PORT =  xxx
-DATABASE_USERNAME = xxx
-DATABASE_PASSWORD = xxx
-DATABASE_NAME = xxx
-PORT = xxx
+DATABASE_HOST = XXX
+DATABASE_PORT =  XXX
+DATABASE_USERNAME = XXX
+DATABASE_PASSWORD = XXX
+DATABASE_NAME = XXX
+PORT = XXX
 
 
-JWT_SECRET = xxx
+JWT_SECRET = XXX
+
 
