--- a/.env
+++ b/.env
@@ -1,11 +1,12 @@
-DATABASE_HOST = XXX
-DATABASE_PORT =  XXX
-DATABASE_USERNAME = XXX
-DATABASE_PASSWORD = XXX
-DATABASE_NAME = XXX
-PORT = XXX
+DATABASE_HOST = bt92jm2wtirh9gsjubcj-mysql.services.clever-cloud.com
+DATABASE_PORT =  3306
+DATABASE_USERNAME = ubntojirihw5pi9t
+DATABASE_PASSWORD = K30Jp9OPmhBP15ALr7Mg
+DATABASE_NAME = bt92jm2wtirh9gsjubcj
+PORT = 3000
 
 
-JWT_SECRET = XXX
+JWT_SECRET = PeDRoSPPS
+
 
 
