--- a/.env
+++ b/.env
@@ -2,11 +2,13 @@ DATABASE_HOST = xxx
 DATABASE_PORT =  xxx
 DATABASE_USERNAME = xxx
 DATABASE_PASSWORD = xxx
-DATABASE_NAME = xxx
+DATABASE_NAME = bt92jm2wtirh9gsjubcj
 PORT = xxx
 
 
 JWT_SECRET = xxx
+
+
 
 
 
