--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DATABASE_HOST = xxx
 DATABASE_PORT =  xxx
 DATABASE_USERNAME = xxx
 DATABASE_PASSWORD = xxx
-DATABASE_NAME = bt92jm2wtirh9gsjubcj
+DATABASE_NAME = xxx
 PORT = xxx
 
 
