--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.13.2",
+        "file-saver": "^2.0.5",
         "mysql2": "^2.3.3",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
@@ -40,7 +41,8 @@
         "rimraf": "^3.0.2",
         "rxjs": "^7.2.0",
         "typeorm": "^0.3.9",
-        "webpack": "^5.74.0"
+        "webpack": "^5.74.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "@nestjs/cli": "^8.0.0",
